--- a/RuneScapeCacheTools/packages.config
+++ b/RuneScapeCacheTools/packages.config
@@ -4,5 +4,6 @@
   <package id="FlacLibSharp" version="2.0.0" targetFramework="net461" />
   <package id="LZMA-SDK" version="9.20" targetFramework="net461" />
   <package id="NVorbis" version="0.8.5.0" targetFramework="net461" />
+  <package id="Serilog" version="2.9.0" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
 </packages>
