--- a/RuneScapeCacheToolsCLI/packages.config
+++ b/RuneScapeCacheToolsCLI/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="log4net" version="2.0.7" targetFramework="net461" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net461" />
+  <package id="Serilog" version="2.9.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net461" />
 </packages>
