--- a/RuneScapeCacheToolsCLI/RuneScapeCacheToolsCLI.csproj
+++ b/RuneScapeCacheToolsCLI/RuneScapeCacheToolsCLI.csproj
@@ -80,9 +80,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Argument\ArgumentParser.cs" />
+    <Compile Include="Argument\CommonArgument.cs" />
     <Compile Include="Command\InfoCommand.cs" />
-    <Compile Include="CommonArgument.cs" />
-    <Compile Include="ArgumentParser.cs" />
     <Compile Include="Command\ExtractCommand.cs" />
     <Compile Include="Command\BaseCommand.cs" />
     <Compile Include="Command\HelpCommand.cs" />
