Rename incorrectly named tests

--- a/RuneScapeCacheToolsTest/RuneScapeCacheToolsTest.csproj
+++ b/RuneScapeCacheToolsTest/RuneScapeCacheToolsTest.csproj
@@ -73,8 +73,8 @@
     <Compile Include="Test\Cache\CacheTypes.cs" />
     <Compile Include="Test\Cache\DownloaderCache.cs" />
     <Compile Include="Test\Cache\FlatFileCache.cs" />
-    <Compile Include="Test\File\CacheFile.cs" />
-    <Compile Include="Test\File\EntryFile.cs" />
+    <Compile Include="Test\File\CacheFileTests.cs" />
+    <Compile Include="Test\File\EntryFileTests.cs" />
     <Compile Include="Test\File\ItemDefinitionFileTests.cs" />
     <Compile Include="Test\File\JagaFileTests.cs" />
     <Compile Include="Test\File\ReferenceTableFileTests.cs" />
