--- a/RuneScapeCacheTools/packages.config
+++ b/RuneScapeCacheTools/packages.config
@@ -7,6 +7,7 @@
   <package id="Serilog" version="2.9.0" targetFramework="net461" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
