--- a/RuneScapeCacheToolsTest/RuneScapeCacheToolsTest.csproj
+++ b/RuneScapeCacheToolsTest/RuneScapeCacheToolsTest.csproj
@@ -70,11 +70,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\BaseTests.cs" />
-    <Compile Include="Test\Cache\CacheTypes.cs" />
-    <Compile Include="Test\Cache\DownloaderCache.cs" />
-    <Compile Include="Test\Cache\FlatFileCache.cs" />
-    <Compile Include="Test\File\CacheFileTests.cs" />
-    <Compile Include="Test\File\EntryFileTests.cs" />
+    <Compile Include="Test\Cache\CacheTests.cs" />
+    <Compile Include="Test\Cache\DownloaderCacheTests.cs" />
+    <Compile Include="Test\Cache\FlatFileCacheTests.cs" />
     <Compile Include="Test\File\ItemDefinitionFileTests.cs" />
     <Compile Include="Test\File\JagaFileTests.cs" />
     <Compile Include="Test\File\ReferenceTableFileTests.cs" />
@@ -83,6 +81,7 @@
     <Compile Include="Test\Fixture\TestCacheFixture.cs" />
     <Compile Include="Test\ExperimentalTests.cs" />
     <Compile Include="Test\Utility\BinaryStreamExtensionsTests.cs" />
+    <Compile Include="Test\Utility\CacheFileDecoderTests.cs" />
     <Compile Include="Test\Utility\FormatterTests.cs" />
     <Compile Include="Test\Utility\SoundtrackExtractorTests.cs" />
   </ItemGroup>
