--- a/RuneScapeCacheTools/packages.config
+++ b/RuneScapeCacheTools/packages.config
@@ -3,11 +3,16 @@
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net461" />
   <package id="FlacLibSharp" version="3.2.0" targetFramework="net461" />
   <package id="LZMA-SDK" version="19.0.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Sqlite" version="3.1.7" targetFramework="net461" />
+  <package id="Microsoft.Data.Sqlite.Core" version="3.1.7" targetFramework="net461" />
   <package id="NVorbis" version="0.10.1" targetFramework="net461" />
   <package id="Serilog" version="2.9.0" targetFramework="net461" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net461" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.2" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
