--- a/RuneScapeCacheToolsTest/packages.config
+++ b/RuneScapeCacheToolsTest/packages.config
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ILMerge" version="3.0.41" targetFramework="net461" />
+  <package id="Microsoft.Data.Sqlite" version="3.1.7" targetFramework="net461" />
+  <package id="Microsoft.Data.Sqlite.Core" version="3.1.7" targetFramework="net461" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.2" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="xunit" version="2.4.1" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net461" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net461" />
