Try adding an xunit.runner.json file

--- a/RuneScapeCacheToolsTest/RuneScapeCacheToolsTest.csproj
+++ b/RuneScapeCacheToolsTest/RuneScapeCacheToolsTest.csproj
@@ -92,7 +92,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -155,6 +154,9 @@
   <ItemGroup>
     <Content Include="testcache\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Choose>
