--- a/RuneScapeCacheTools/packages.config
+++ b/RuneScapeCacheTools/packages.config
@@ -7,7 +7,8 @@
   <package id="NVorbis" version="0.10.1" targetFramework="net461" />
   <package id="Serilog" version="2.9.0" targetFramework="net461" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net461" />
-  <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.core" version="2.0.3" targetFramework="net461" />
+  <package id="SQLitePCLRaw.provider.sqlite3" version="2.0.3" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
