Add ItemDefinitionExtractor and ItemsCommand for item extraction

--- a/RuneScapeCacheTools/packages.config
+++ b/RuneScapeCacheTools/packages.config
@@ -3,15 +3,19 @@
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net461" />
   <package id="FlacLibSharp" version="3.2.0" targetFramework="net461" />
   <package id="LZMA-SDK" version="19.0.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Data.Sqlite.Core" version="3.1.7" targetFramework="net461" />
   <package id="NVorbis" version="0.10.1" targetFramework="net461" />
   <package id="Serilog" version="2.9.0" targetFramework="net461" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net461" />
   <package id="SQLitePCLRaw.core" version="2.0.3" targetFramework="net461" />
   <package id="SQLitePCLRaw.provider.sqlite3" version="2.0.3" targetFramework="net461" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net461" />
+  <package id="System.Text.Json" version="5.0.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
