--- a/RuneScapeCacheTools/packages.config
+++ b/RuneScapeCacheTools/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Data.Sqlite.Core" version="3.1.7" targetFramework="net461" />
   <package id="NVorbis" version="0.10.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="Serilog" version="2.9.0" targetFramework="net461" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net461" />
   <package id="SQLitePCLRaw.core" version="2.0.3" targetFramework="net461" />
@@ -15,7 +16,6 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net461" />
-  <package id="System.Text.Json" version="5.0.2" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
